--- a/src/app/components/sections/TextSlider.module.css
+++ b/src/app/components/sections/TextSlider.module.css
@@ -9,15 +9,45 @@
     transform: translateY(0);
   }
   25%, 45% {
-    transform: translateY(110px);
+    transform: translateY(25%);
   }
   50%, 70% {
-    transform: translateY(220px);
+    transform: translateY(50%);
   }
   75%, 95% {
-    transform: translateY(330px);
+    transform: translateY(75%);
   }
   100% {
     transform: translateY(0);
   }
 }
+
+
+/* @media (max-width: 1280px) {
+  .slider {
+    animation: slideDownTab 8s infinite;
+  }
+
+  @keyframes slideDownTab {
+    0%, 20% { transform: translateY(0); }
+    25%, 45% { transform: translateY(75px); }
+    50%, 70% { transform: translateY(150px); }
+    75%, 95% { transform: translateY(225px); }
+    100% { transform: translateY(0); }
+  }
+}
+
+
+@media (max-width: 768px) {
+  .slider {
+    animation: slideDownMobile 8s infinite;
+  }
+
+  @keyframes slideDownMobile {
+    0%, 20% { transform: translateY(0); }
+    25%, 45% { transform: translateY(50px); }
+    50%, 70% { transform: translateY(100px); }
+    75%, 95% { transform: translateY(150px); }
+    100% { transform: translateY(0); }
+  }
+} */
